--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <html>
-<head>
+   <head>
 <link rel="sortcut icon" href="./img/M.png" type="image/gif" />
 <link rel="stylesheet" type="text/css" href="./css/main.css">
-   <title>tela de login</title> 
+   <title>Tela de login</title> 
 </head>
-<body background="./img/blue.webp"
+<body>
 <header class="menu principal">
     <center>
-    <main>
-    <div class="header-1">
-    <div class="logo">
-<img src="./img/1625003682417.png"
+      <main>
+       <img src="img/login.png" height="100px" width="100px">
     </center>
     </div>
     <form> 
     </br>
 </br>
 <div class="c">
-    <form action="tela de login.html">
+    <form action="index.html">
         <input type="email" placeholder="Digite o seu apelido:" ><br>
-        
         <input type="password" placeholder="Digite a sua senha:" ><br>
-       
+        <input type="button" a value="Cadastrar">
         <input type="button" a value="Entra"> <br>
         <a href="#">Esqueci a minha senha</a>
-
     </form>
 </div>
-
 </script>
 </br>
 </main>
 </header>
 </br>
+</body>
+</html>
