--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <a href="#">Esqueci a minha senha</a>
     </form>
 </div>
+<br><br><br><br><br><br><br><br><br><br><br>
+    <center>
+    <h4>Desenvolvido por Marcelle Paiva</h4>
+    </center>
 </script>
 </br>
 </main>
